# jsonresume-docx

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  resume-template.docx  sample-resume.json
.devcontainer/: devcontainer.json
jsonresume_docx/: README.md  cli.py  filters.py  globals.py
jsonresume_docx/static/: resume-template.docx
