[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonresume_docx"
description = "Render your JSON resume as a docx file."
dynamic = ["version"]
dependencies = [
  "docxtpl >= 0.16.7",
  "dotmap >= 1.3.30, < 2.0.0",
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 120

[project.scripts]
jsonresume-docx = "jsonresume_docx.cli:cli"

[tool.setuptools.packages.find]
include = ["jsonresume_docx"]
namespaces = false